--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -42,49 +42,62 @@ p {
 	padding: 0 20% 0;
 }
 
-#content-2 {
+/*-------------- SKILL CONTAINER --------------*/
+
+#container-1 {
+	width: 1280px;
+	float: left;
 	background: #fbfbfa;
-	float: right;
-	padding: 20px 215px;
+	padding: 10px;
 	margin: 0 0 0 0;
 
 }
 
-#content-2 img {
-	margin-left: 55px;
+#container-2 {
+	background: #c3fde1;
+	width: 220px;
+	padding: 10px;
+	margin: 1%;
+	float: right;
+	position: relative;
 }
 
-#content-2 p {
+#container-2-1 {
+	background: #d8d7de;
+	width: 220px;
+	padding: 10px;
+	float: left;
+	margin: 1%;
+	position: relative;
+}
+
+
+#container-2-2 {
+	background: #f7f0e0;
+	width: 220px;
+	padding: 10px;
+	float: right;
+	margin: 1%;
+	position: relative;
+}
+
+#container-2 img {
+	margin-left: 50px;
+}
+
+#container-2-1 img {
+	margin-left: 50px; 
+}
+
+#container-2-2, img {
+	margin-left: 50px;
+
+}
+
+#container-1 p {
 	text-align: center;
 	font-size: 0.7em;
 }
-
-#content-2-1 {
-	background: #c3fde1;
-	width: 220px;
-	float: right;
-	margin: 20px;
-	position: relative;
-}
-
-#content-2-2 {
-	background: #d8d7de;
-	width: 220px;
-	float: right;
-	margin: 20px;
-	position: relative;
-}
-
-
-#content-2-3 {
-	background: #f7f0e0;
-	width: 220px;
-	float: right;
-	margin: 20px;
-	position: relative;
-}
-
-
 
 /*-------------- ABOUT PAGE --------------*/
 
@@ -166,6 +179,10 @@ ol li {
 	font-size: 0.7em;
 	color: #777777;
 
+}
+
+.social-icon {
+	margin: 0 0 0 0;
 }
 
 /* picture hover effect */
