--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -49,7 +49,7 @@ p {
 	width: 770px;
 	margin: 0 auto;
 	padding-top: 15px;
-	padding-bottom: 25px;
+	padding-bottom: 30px;
 }
 
 
@@ -71,7 +71,7 @@ figure {
 }
 
 figcaption {
-	padding-left: 15px;
+	padding-left: 0.5%;
 	font-size: 0.75em;
 }
 
