--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -26,6 +26,7 @@ p {
 	width: 100%;
 	margin: 0 auto;
 	background-color: #fff;
+	position: relative;
 }
 
 #header {
@@ -45,26 +46,26 @@ p {
 /*-------------- SKILL CONTAINER --------------*/
 
 
-.wrapper {
-	width: 770px;
+.wrap {
+	width: 870px;
 	margin: 0 auto;
 	padding-top: 15px;
 	padding-bottom: 30px;
+	position: relative;
 }
 
 
 .entry {
 	width: 235px;
 	float: left;
-	margin: 10px;
+	margin: 15px;
 	height: 198px;
 }
 
 figure {
-	display: inline-block;
+	display: block;
 	width: 230px;
-	height: 170px;
-	background-color: #c3fde1;
+	height: 160px;
 	margin: 0;
 	padding: 9px;
 	text-align: center;
@@ -73,6 +74,18 @@ figure {
 figcaption {
 	padding-left: 0.5%;
 	font-size: 0.75em;
+}
+
+.mint {
+	background-color: #c3fde1;
+}
+
+.lavander {
+	background-color: #d8d7de;
+}
+
+.sand {
+	background-color: #f7f0e0;
 }
 
 /*-------------- ABOUT PAGE --------------*/
@@ -162,7 +175,6 @@ ol li {
 }
 
 /* picture hover effect */
-
 .social-icon {
 	-webkit-filter: grayscale(100%);
 	-webkit-transition: all .3s linear;
@@ -253,15 +265,24 @@ nav a.selected, nav a:hover {
 
 /*-------------- MEDIA QUERIES --------------*/
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 320px) {
+	.social-icon {
+		display: none;
+	}
+
 
 }
 
 @media screen and (min-width: 600px) {
+	.social-icon {
+		display: inline;
+	}
+
 
 }
 
 @media screen and (min-width: 768px) {
+
 
 }
 
@@ -272,7 +293,6 @@ nav a.selected, nav a:hover {
 
 
 @media screen and (min-width: 1200px) {
-
 
 }
 
