--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-	width: 100%;
+	min-width: 100%;
 	margin: 0;
 	padding: 0;
 	line-height: 1.4;
@@ -23,7 +23,7 @@ p {
 
 
 #body {
-	width: 100%;
+	min-width: 100%;
 	margin: 0 auto;
 	background-color: #fff;
 	position: relative;
@@ -32,7 +32,9 @@ p {
 #header {
 	max-width: 100%;
 	background: #73eac1;
-	height: 50px;
+	height: 350px;
+	background: url('../img/mountain.jpg') no-repeat center -10px;
+	position: relative;
 }
 
 
@@ -45,29 +47,27 @@ p {
 
 /*-------------- SKILL CONTAINER --------------*/
 
-
-.wrap {
-	width: 870px;
+.skillContainer {
+	width: 80%;
 	margin: 0 auto;
 	padding-top: 15px;
 	padding-bottom: 30px;
-	position: relative;
 }
 
 
 .entry {
-	width: 235px;
+	width: 25%;
 	float: left;
-	margin: 15px;
-	height: 198px;
+	margin: 1.5%;
+	height: 20%;
 }
 
 figure {
 	display: block;
-	width: 230px;
-	height: 160px;
+	width: 100%;
+	height: 75%;
 	margin: 0;
-	padding: 9px;
+	padding: 1%;
 	text-align: center;
 }
 
@@ -265,35 +265,14 @@ nav a.selected, nav a:hover {
 
 /*-------------- MEDIA QUERIES --------------*/
 
-@media screen and (min-width: 320px) {
-	.social-icon {
-		display: none;
+/* For mobiles and tablets*/
+
+@media screen and (max-width: 400px) {
+	.entry {
+		width: 100% !important;
+		margin-left: 10% !important;
+		clear: none !important;
 	}
-
-
-}
-
-@media screen and (min-width: 600px) {
-	.social-icon {
-		display: inline;
-	}
-
-
-}
-
-@media screen and (min-width: 768px) {
-
-
-}
-
-@media screen and (min-width: 900px) {
-
-
-}
-
-
-@media screen and (min-width: 1200px) {
-
 }
 
 
