--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -5,7 +5,7 @@ body {
 	min-width: 100%;
 	margin: 0;
 	padding: 0;
-	line-height: 1.4;
+	line-height: 1.5;
 	font-family: 'Raleway', 'sans-serif';
 	background-color: #ECEAE7;
 }
@@ -51,7 +51,7 @@ p {
 	width: 65%;
 	margin: 0 auto;
 	padding-top: 1%;
-	padding-bottom: 16%;
+	padding-bottom: 17%;
 }
 
 
@@ -67,7 +67,7 @@ figure {
 	width: 100%;
 	height: 75%;
 	margin: 1%;
-	padding: 3%;
+	padding: 3.5%;
 	text-align: center;
 }
 
@@ -132,7 +132,7 @@ figcaption {
 
 /* profile photo */
 .profilePhoto {
-	border: 10px #fbfbfa solid;
+	border: 10px #F4F4F4 solid;
 	border-radius: 100%;
 	width: 150px;
 	height: 150px;
@@ -169,7 +169,6 @@ ol li {
 /*-------------- FOOTER --------------*/
 
 #footer {
-	background: #ff9;
 	text-align: center;
 	padding: 30px 0 25px 0;
 	background-color: #f1f1f1;
@@ -280,12 +279,28 @@ nav a.selected, nav a:hover {
 
 /* For mobiles and tablets*/
 
+@media screen and (min-width: 320px) {
+	.social-icon {
+		display: none;
+	}
+
+
+}
+
 @media screen and (max-width: 400px) {
 	.entry {
 		width: 100% !important;
 		margin-left: -5% !important;
 		clear: none !important;
 	}
+}
+
+@media screen and (min-width: 600px) {
+	.social-icon {
+		display: inline;
+	}
+
+
 }
 
 
