--- a/Porftolio-v2/css/responsive.css
+++ b/Porftolio-v2/css/responsive.css
@@ -7,6 +7,15 @@
 		display: none;
 	}
 
+	/*************************
+	PAGE: ABOUT
+	*************************/
+
+	.profile-photo {
+		float: left;
+		margin: 0 5% 80px 0;
+	}
+
 }
 
 @media screen and (min-width: 400px) {
@@ -24,6 +33,20 @@
 		width: 100% !important;
 		margin-left: -5% !important;
 		clear: none !important;
+	}
+
+	/*************************
+	TWO COLUMN LAYOUT
+	*************************/
+
+	#primary {
+		width: 50%;
+		float: left;
+	}
+
+	#secondary {
+		width: 40%;
+		float: right;
 	}
 }
 
