--- a/Porftolio-v2/css/responsive.css
+++ b/Porftolio-v2/css/responsive.css
@@ -16,6 +16,14 @@
 		margin: 0 5% 80px 0;
 	}
 
+	/*************************
+	NAVIGATION
+	*************************/
+	nav {
+		font-size: 0.9em;
+	}
+
+
 }
 
 @media screen and (min-width: 400px) {
@@ -48,6 +56,22 @@
 		width: 40%;
 		float: right;
 	}
+
+	/*************************
+	TWO COLUMN LAYOUT: ABOUT PAGE
+	*************************/
+
+	#firstColumn {
+	width: 20%;
+	float: left;
+	margin-top: 2%;
+}
+
+	#secongColulmn {
+		width: 70%;
+		float: right;
+}
+
 }
 
 @media screen and (min-width: 500px) {
@@ -62,6 +86,37 @@
 		display: inline;
 	}
 
+	nav {
+		background: none;
+		float: right;
+		font-size: 1.125em;
+		margin-right: 5%
+		text-align: right;
+		width: 45%
+	}
+
+	h1 {
+		font-size: 2.5em;
+	}
+
+	h2 {
+		font-size: 0.825em;
+		margin-bottom: 20px;
+	}
+
+	header {
+		border-bottom: 5px solid #0b9762;
+		margin-bottom: 60px;
+	}
+
+	nav a.selected, nav a:hover {
+	color: rgba(34, 33, 45, 0.75);
+}
+
+	nav {
+		font-size: 0.95em;
+	}
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -71,6 +126,10 @@
 		float: left !important;
 		margin: 2% !important;
 		height: 20% !important;
+	}
+
+	nav {
+		font-size: 1.1em;
 	}
 }
 
