--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -35,6 +35,7 @@ p {
 /*	background: #73eac1;*/
 	height: 350px;
 	position: relative;
+	bottom: 10px;
 }
 
 .first {
@@ -190,7 +191,7 @@ ol li {
 }
 
 .social-icon {
-	margin: 0 0 0 0;
+	margin: 0 1px;
 }
 
 /* picture hover effect */
