--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -263,8 +263,8 @@ a {
 }
 
 ul li {
-	display: inline;
-	padding: 10px 10px;
+	display: inline-block;
+	padding: 5px 5px;
 }
 
 /*-------------- COLORS --------------*/
