--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -172,6 +172,69 @@ ol li {
 	background: url('../img/mountain.jpg') no-repeat center -15px;
 }
 
+#main {
+width:845px;
+margin:20px auto;
+padding: 5px 20px;
+}
+
+.clearfix {
+display:block;
+height:0;
+clear:both;
+visibility:hidden;
+}
+
+.details {
+margin:15px 20px;
+}
+
+h4 {
+line-height:160%;
+letter-spacing:.15em;
+color:#fff;
+text-shadow:1px 1px 0 #000;
+}
+
+/*General Mosaic Styles*/
+.mosaic-block {
+	float:left;
+	position:relative;
+	overflow:hidden;
+	width:400px;
+	height:250px;
+	margin:10px;
+	background:#111 url(../img/progress.gif) no-repeat center center;
+	border:1px solid #fff;
+	-webkit-box-shadow:0 1px 3px rgba(0,0,0,0.5);
+}
+
+	.mosaic-backdrop {
+		display:none;
+		position:absolute;
+		top:0;
+		height:100%;
+		width:100%;
+		background:#111;
+	}
+	
+	.mosaic-overlay {
+		display:none;
+		z-index:5;
+		position:absolute;
+		width:100%;
+		height:100%;
+		background:#111;
+	}
+
+	/* BAR */
+
+	.bar .mosaic-overlay {
+	bottom:-100px;
+	height:100px;
+	background:url(../img/portfolio_links/bg-black.png);
+	}
+
 
 /*-------------- FOOTER --------------*/
 
