--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -29,15 +29,11 @@ p {
 	position: relative;
 }
 
-#header {
+#header1 {
 	max-width: 100%;
-/*	background: #73eac1;*/
-	height: 380px;
+	height: 420px;
 	position: relative;
 	border-bottom: 2px solid #f1f1f1;
-}
-
-.first {
 	background: url('../img/mountain.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
@@ -116,7 +112,11 @@ figcaption {
 
 /*-------------- ABOUT PAGE --------------*/
 
-.second {
+#header2 {
+	max-width: 100%;
+	height: 380px;
+	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/beach.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
@@ -139,8 +139,14 @@ section {
 
 /*-------------- WORK PAGE --------------*/
 
-.third {
+#header3 {
+	max-width: 100%;
+	height: 380px;
+	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/mountain.jpg') no-repeat center -10px;
+	background-attachment: fixed;
+	position: relative;
 }
 
 .clearfix {
@@ -204,7 +210,12 @@ h4 {
 
 /*-------------- CONTACT PAGE --------------*/
 
-.fourth {
+
+#header4 {
+	max-width: 100%;
+	height: 380px;
+	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/beach.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
@@ -311,6 +322,7 @@ nav ul {
 	text-transform: uppercase;
 }
 
+
 /* selected nav link */
 nav a.selected, nav a:hover {
 	color: rgba(34, 33, 45, 0.75);
@@ -326,7 +338,7 @@ nav a {
 
 a {
 	text-decoration: none;
-	font-family: 'Ubuntu', 'sans-serif';
+	font-family:'Open Sans', sans-serif;;
 }
 
 ul li {
