--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -33,18 +33,17 @@ p {
 	max-width: 100%;
 	height: 420px;
 	position: relative;
-	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/mountain.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
 }
 
 
-#content-1 {
+.content{
 	max-width: 940px;
 	background: #FFFFFF;
 	text-align: justify;
-	padding: 2% 20% 2%;
+	padding: 1% 20% 1%;
 }
 
 #wrapper {
@@ -52,6 +51,7 @@ p {
 	margin: 0 auto;
 	padding: 0 5%;
 }
+
 
 /*-------------- SKILL CONTAINER --------------*/
 
@@ -116,7 +116,6 @@ figcaption {
 	max-width: 100%;
 	height: 380px;
 	position: relative;
-	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/beach.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
@@ -143,11 +142,11 @@ section {
 	max-width: 100%;
 	height: 380px;
 	position: relative;
-	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/mountain.jpg') no-repeat center -10px;
 	background-attachment: fixed;
 	position: relative;
 }
+
 
 .clearfix {
 	display:block;
@@ -164,7 +163,6 @@ h4 {
 	line-height:150%;
 	letter-spacing: .15em;
 	color: #fff;
-	text-shadow: 1px 1px 0 #000;
 }
 
 /*General Mosaic Styles*/
@@ -176,7 +174,6 @@ h4 {
 	height: 215px;
 	margin: 10px;
 	border: 1px solid #777;
-	-webkit-box-shadow:0 1px 3px rgba(0,0,0,0.5);
 }
 
 .mosaic-backdrop {
@@ -215,7 +212,6 @@ h4 {
 	max-width: 100%;
 	height: 380px;
 	position: relative;
-	border-bottom: 2px solid #f1f1f1;
 	background: url('../img/beach.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
