--- a/Porftolio-v2/css/style.css
+++ b/Porftolio-v2/css/style.css
@@ -30,12 +30,12 @@ p {
 }
 
 #header1 {
-	max-width: 100%;
-	height: 420px;
-	position: relative;
+	min-width: 100%;
+	height: 400px;
 	background: url('../img/mountain.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 }
 
 
@@ -113,14 +113,14 @@ figcaption {
 /*-------------- ABOUT PAGE --------------*/
 
 #header2 {
-	max-width: 100%;
-	height: 380px;
+	min-width: 100%;
+	height: 400px;
 	position: relative;
 	background: url('../img/beach.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 }
-
 
 /* profile photo */
 .profilePhoto {
@@ -139,12 +139,13 @@ section {
 /*-------------- WORK PAGE --------------*/
 
 #header3 {
-	max-width: 100%;
-	height: 380px;
+	min-width: 100%;
+	height: 400px;
 	position: relative;
-	background: url('../img/mountain.jpg') no-repeat center -10px;
+	background: url('../img/mountain.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 }
 
 
@@ -209,12 +210,13 @@ h4 {
 
 
 #header4 {
-	max-width: 100%;
-	height: 380px;
+	min-width: 100%;
+	height: 400px;
 	position: relative;
 	background: url('../img/beach.jpg') no-repeat center;
 	background-attachment: fixed;
 	position: relative;
+	border-bottom: 2px solid #f1f1f1;
 }
 
 .contactInfo {
