--- a/Portfolio-v3/css/style.css
+++ b/Portfolio-v3/css/style.css
@@ -69,7 +69,13 @@ h3 {
 	padding: 10px 0;
 	background-color: #FFFFFF;
 	border-bottom: 1px solid #595959;
+	text-align: justify;
 
+}
+
+.about1 {
+	margin: 0 auto;
+	width: 70%;
 }
 
 .profilePhoto {
@@ -85,7 +91,6 @@ h3 {
 	padding: 10px 0;
 	background-color: #DDDDDD;
 	border-bottom: 1px solid #595959;
-
 }
 
 /* ------------- CONTACT SECTION ------------- */
@@ -98,7 +103,12 @@ h3 {
 	padding: 0;
 	margin: 0;
 	font-size: 0.9em;
+	text-align: justify;
+}
 
+.contact1 {
+	margin: 0 auto;
+	width: 70%;
 }
 
 .contactInfo a {
