--- a/Portfolio-v3/css/style.css
+++ b/Portfolio-v3/css/style.css
@@ -19,7 +19,8 @@ h2 {
 }
 
 h3 {
-	font-size: 1em;
+	font-size: 1.1em;
+	text-transform: uppercase;
 }
 
 
@@ -63,19 +64,19 @@ h3 {
 }
 
 
-/* ABOUT SECTION */
+/* ------------- ABOUT SECTION ------------- */
 
 #about {
 	padding: 10px 0;
 	background-color: #FFFFFF;
 	border-bottom: 1px solid #595959;
-	text-align: justify;
 
 }
 
 .about1 {
 	margin: 0 auto;
 	width: 70%;
+	min-height: 250%
 }
 
 .profilePhoto {
@@ -85,12 +86,21 @@ h3 {
 	border-radius: 100%;
 }
 
+section {
+	text-align: justify;
+}
+
 /* ------------- WORK SECTION ------------- */
 
 #work {
 	padding: 10px 0;
 	background-color: #DDDDDD;
 	border-bottom: 1px solid #595959;
+}
+
+.work1 {
+	width: 900px;
+	margin: 1% auto;
 }
 
 /* ------------- CONTACT SECTION ------------- */
@@ -107,30 +117,11 @@ h3 {
 }
 
 .contact1 {
-	margin: 0 auto;
+	margin: 1% auto;
 	width: 70%;
+	text-align: center;
 }
 
-.contactInfo a {
-	display: block;
-	min-height: 20px;
-	background-repeat: no-repeat;
-	background-size: 20px 20px;
-	padding: 0 0 0 30px;
-	margin: 0 0 10px;
-}
-
-.contactInfo li.phone a {
-	background-image: url('../img/contact/phone.png');
-}
-
-.contactInfo li.email a {
-	background-image: url('../img/contact/mail.png');
-}
-
-ol li {
-	list-style: none;
-}
 
 /* ------------- FOOTER ------------- */
 #footer {
@@ -142,7 +133,9 @@ ol li {
 }
 
 .socialMedia {
+	float: right;
 	margin: 10px 1px;
+	padding-right: 25%
 }
 
 .socialMedia img {
@@ -158,8 +151,11 @@ ol li {
 }
 
 .copyright {
+	margin-top: 1%;
+	float: left;
 	font-size: 0.8em;
 	color: #777777;
+	padding-left: 25%;
 
 }
 
@@ -200,6 +196,53 @@ nav a:hover {
 	    filter: alpha(opacity=90);
 		opacity: .6;
 }
+
+
+/* ------------- MEDIA QUERIES ------------- */
+
+@media screen and (min-width: 485px) {
+
+	/*************************
+	TWO COLUMN LAYOUT: ABOUT SECTION
+	*************************/
+
+	.firstColumn {
+		width: 42%;
+		float: left;
+		margin-top: 2%;
+	}
+
+	.secondColulmn {
+		width: 53%;
+		float: right;
+		margin-right: 3.056%;
+	}
+
+	.firstColumn,
+	.secondColulmn {
+		margin-bottom: 15px;
+	}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
