--- a/Portfolio-v3/css/style.css
+++ b/Portfolio-v3/css/style.css
@@ -11,11 +11,11 @@ body {
 
 h1 {
 	font-family: 'Alegreya Sans', sans-serif;
-	font-size: 2.5em;
+	font-size: 3em;
 }
 
 h2 {
-	font-size: 1.2em;
+	font-size: 1.5em;
 }
 
 h3 {
@@ -41,7 +41,7 @@ h3 {
 	width: 100%;
 	text-align: center;
 	overflow: hidden;
-	height: 370px;
+	height: 550px;
 	background: url('../img/cover.jpg') center no-repeat;
 	position: relative;
 	background-size: cover; 
@@ -60,7 +60,7 @@ h3 {
 }
 
 #header h1 {
-	padding-top: 2.5%;
+	padding-top: 12%;
 }
 
 
@@ -75,15 +75,18 @@ h3 {
 
 .about1 {
 	margin: 0 auto;
-	width: 70%;
-	min-height: 250%
+	width: 80%;
 }
 
 .profilePhoto {
-	height: 220px;
-	width: 220px;
+	width: 300px;
+	height: 300px;
 	border: 2px solid #595959;
 	border-radius: 100%;
+}
+
+#about p {
+	font-size: 0.95em;
 }
 
 section {
@@ -94,7 +97,7 @@ section {
 
 #work {
 	padding: 10px 0;
-	background-color: #DDDDDD;
+	background-color: #FBFCFE;
 	border-bottom: 1px solid #595959;
 }
 
@@ -108,12 +111,13 @@ section {
 #contact {
 	padding: 10px 0;
 	border-bottom: 1px solid #000;
-	background-color: #f1f1f1;
+	background-color: #D4C6C5;
 	list-style: none;
 	padding: 0;
 	margin: 0;
 	font-size: 0.9em;
 	text-align: justify;
+	overflow: hidden;
 }
 
 .contact1 {
@@ -168,9 +172,12 @@ nav {
 nav ul {
 	list-style: none;
 	text-transform: uppercase;
-	margin-top: 7%;
+	margin-top: 10%;
 	font-size: 1.3em;
+}
 
+nav a {
+	font-weight: 700;
 }
 
 ul li {
@@ -193,8 +200,8 @@ nav a, nav a:visited {
 }
 /* navigation hover effect */
 nav a:hover {
-	    filter: alpha(opacity=90);
-		opacity: .6;
+	    filter: alpha(opacity=100);
+		opacity: .65;
 }
 
 
@@ -206,14 +213,13 @@ nav a:hover {
 	TWO COLUMN LAYOUT: ABOUT SECTION
 	*************************/
 
-	.firstColumn {
-		width: 42%;
+.firstColumn {
+		width: 40%;
 		float: left;
-		margin-top: 2%;
 	}
 
 	.secondColulmn {
-		width: 53%;
+		width: 55%;
 		float: right;
 		margin-right: 3.056%;
 	}
