--- a/Portfolio-v3/css/style.css
+++ b/Portfolio-v3/css/style.css
@@ -39,7 +39,8 @@ h3 {
 
 .quote {
 	color: #F0EBEB;
-	font-family: 'Playball', cursive;
+	font-family: 'IM Fell French Canon', serif;
+	font-style: italic;
 }
 
 #wrapper {
