--- a/Elia portfolio/css/bookblock.css
+++ b/Elia portfolio/css/bookblock.css
@@ -3,7 +3,7 @@
 	height: 300px;
 	margin: 0 auto;
 	position: relative;
-	z-index: 100;
+	z-index: 90;
 	-webkit-perspective: 1300px;
 	-moz-perspective: 1300px;
 	perspective: 1300px;
@@ -49,7 +49,7 @@
 	width: 100%;
 	top: 0;
 	left: 0;
-	background: #fff;
+	background: #FCFCFC;
 }
 
 .bb-outer {
