--- a/Elia portfolio/css/style.css
+++ b/Elia portfolio/css/style.css
@@ -13,9 +13,6 @@
 	width: 45px;
 }
 
-img {
-	max-height: 70%;
-}
 
 /* MAIN */
 
@@ -66,6 +63,10 @@ img {
 	-moz-box-align: center;
 	-webkit-align-items: center;
 	align-items: center;
+}
+
+.bb-custom-side img {
+	max-height: 15em;
 }
 
 .bb-custom-firstpage h1 {
