--- a/Page for portfolio/css/style.css
+++ b/Page for portfolio/css/style.css
@@ -1,7 +1,7 @@
 /**************** MAIN ****************/
 
 body {
-	background-color: #ccc;
+	background-color: #fff;
 	font-family: 'PT Sans', sans-serif;
 }
 
@@ -15,10 +15,10 @@ h2 {
 }
 
 #wrapper {
-	background-color: #fff;
 	margin: 0 auto;
 	max-width: 800px;
 	margin-bottom: 10px;
+	overflow: hidden;
 }
 
 p {
@@ -32,39 +32,38 @@ p {
 /**************** HEADER ****************/
 
 #header {
-	background: -webkit-linear-gradient(#959595, #CFCFCF); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#959595, #CFCFCF); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#959595, #CFCFCF); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#959595, #CFCFCF); /* Standard syntax */
-	text-align: right;
+	background: #EBEBEB;
+	text-align: center;
 	overflow: hidden;
-	border-bottom: 1px solid #000;
+	height: 20%;
+	width: 40%;
+	margin: 0 auto;
 }
 
-nav a {
+.upperNav a {
 	text-decoration: none;
+	font-family: 'Open Sans', sans-serif;
 }
 
-nav ul {
+.upperNav ul {
 	list-style: none;
-	text-transform: uppercase;
-	font-size: 1.2em;
+	font-size: 1em;
 }
 
 ul li {
 	display: inline-block;
-	padding: 5px 5px;
+	padding: 0 10px 0;
 }
 
 /* navigation */
 
-nav a {
+.upperNav a {
 	text-decoration: none;
-	color: #2C2C2C;
+	color: #989898;
 }
 
-nav a:hover {
-    color: #545454;
+.upperNav a:hover {
+    color: #2C2C2C;
 }
 
 
@@ -72,25 +71,35 @@ nav a:hover {
 /**************** FOOTER ****************/
 
 #footer {
+	background-color: #333333;
 	border-top: 1px solid #000;
 	padding: 20px 0;
-	max-height: 100px;
+	max-height: 40%;
 	text-align: center;
+	bottom: 0;
+	overflow: hidden;
 }
 
-.socialMedia {
+.footerNav {
+	padding: 0 10px 0;
+	font-size: 1em;
 	float: right;
-	padding: 3px;
 }
 
-.socialMedia img {
-	max-width: 20%;
+.footerNav a {
+	text-decoration: none;
+	color: #888888;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.footerNav a:hover {
+    color: #A0A0A0;
 }
 
 .copyright {
-	padding: 3px;
+	padding: 0 0 0 50px;
 	font-size: 0.75em;
-	color: #848484;
+	color: #C2C2C2;
 }
 
 
