--- a/Page for portfolio/css/style.css
+++ b/Page for portfolio/css/style.css
@@ -6,12 +6,24 @@ body {
 }
 
 h1 {
-	font-size: 1em;
+	font-size: 1.8em;
+	text-align: center;
+	line-height: 1;
+	color: #4C4C4C;
+	margin-top: 5%;
 
 }
 
 h2 {
-	font-size: 0.7em;
+	font-size: 1.3em;
+	text-align: center;
+	color: #6F6F6F;
+}
+
+h3 {
+	font-size: 1em;
+	text-align: center;
+	color: #8B8B8B;
 }
 
 #wrapper {
@@ -23,6 +35,7 @@ h2 {
 
 p {
 	text-align: justify;
+	color: #444444;
 }
 
 #content {
@@ -66,6 +79,11 @@ ul li {
     color: #2C2C2C;
 }
 
+/* link colour */
+a {
+	color: #888888;
+	text-decoration: none;
+}
 
 
 /**************** FOOTER ****************/
@@ -97,9 +115,19 @@ ul li {
 }
 
 .copyright {
-	padding: 0 0 0 50px;
-	font-size: 0.75em;
-	color: #C2C2C2;
+	float: left;
+	padding: 0px 0 0 50px;
+	font-size: 0.70em;
+    color: #A0A0A0;
+
+}
+
+.copyright2 {
+	text-align: center;
+	padding: 10px 0 0 50px;
+	font-size: 0.70em;
+    color: #A0A0A0;
+
 }
 
 
