Contact and gallery pages
Contact and gallery pages added to the site.
Sticky footer JS added to all pages and fade in/out effect

--- a/Page for portfolio/css/style.css
+++ b/Page for portfolio/css/style.css
@@ -64,6 +64,7 @@ p {
 }
 
 ul li {
+	position: relative;
 	display: inline-block;
 	padding: 0 10px 0;
 }
@@ -94,8 +95,10 @@ a {
 	padding: 20px 0;
 	max-height: 40%;
 	text-align: center;
-	bottom: 0;
 	overflow: hidden;
+	clear: both;
+	bottom: 0;
+
 }
 
 .footerNav {
