--- a/Page for portfolio/css/style.css
+++ b/Page for portfolio/css/style.css
@@ -26,6 +26,13 @@ h3 {
 	color: #8B8B8B;
 }
 
+::selection {
+	color: #000;
+	background: rgba(194, 224, 255, 0.3);
+	text-shadow: none;
+
+}
+
 #wrapper {
 	margin: 0 auto;
 	max-width: 800px;
@@ -77,7 +84,11 @@ ul li {
 }
 
 .upperNav a:hover {
-    color: #2C2C2C;
+    color: 
+}
+
+nav a.selected, nav a:hover {
+	color: #2C2C2C;
 }
 
 /* link colour */
@@ -86,6 +97,103 @@ a {
 	text-decoration: none;
 }
 
+
+/**************** CONTACT PAGE ****************/
+
+#additionalInfo {
+	max-width: 100%;
+	margin: 0 auto;
+}
+
+
+#additionalInfo p {
+	text-align: center;
+}
+
+.socialMedia img {
+	width: 30px;
+}
+
+.socialMedia {
+	text-align: center;
+}
+
+/* Contact Form */
+.btn-submit {
+	width: 150px;
+	float: left;
+	margin: 2% 25%;
+	border: 0;
+	padding: 10px 23px;
+	color: #4D4D4D;
+	font-size: .75em;
+	background-color: #AAA6A6;
+	text-transform: uppercase;
+	border: 1px solid #595959;
+}
+
+.btn-submit:hover {
+	    filter: alpha(opacity=90);
+		opacity: .7;
+}
+
+.btn-submit-img {
+	margin: 0 -15%;
+	width: 35px;
+	height: 35px;
+}
+
+label, input, textarea, span {
+	float: left;
+	margin: 0 25%;
+}
+	
+label {
+	width: 100%;
+	margin: 1% 0 1% 25%;
+}
+	
+input[type=text], textarea {
+	width: 50%;
+	background-color: #F2F3F4;
+	color: #4D4D4D;
+	border: 1px solid #595959;
+}
+	
+input, textarea {
+	padding: 1%;
+	border: 0;
+}
+	
+input:focus, textarea:focus { 
+	outline: none;
+	border: 1px solid #595959;
+}
+
+.required {
+}
+	
+textarea {
+	height: 180px;
+	border: 1px solid #595959;
+}
+
+.contact1 p {
+	clear:both;
+	min-height: 25px;
+	text-align: left;
+}
+	
+	
+#form span.valid {
+	background-color :#c0ce51;
+	color: #4D4D4D;
+}
+	
+#form span.error {
+	background-color:#b0240f;
+	color: #4D4D4D;
+}
 
 /**************** FOOTER ****************/
 
