--- a/Page for portfolio/css/style.css
+++ b/Page for portfolio/css/style.css
@@ -97,38 +97,40 @@ a {
 	text-decoration: none;
 }
 
+/* MAIN PAGE SLIDES */
+
+#slides { 
+    margin: 40px 10%; 
+    position: relative; 
+    width: 100%;
+    height: 450px; 
+    padding: 10px; 
+}
+
+#slides > div { 
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+    right: 10px; 
+    bottom: 10px; 
+}
+
+#slides > div > img {
+	max-width: 70%;
+}
+
 
 /**************** GALLERY ****************/
 
-#gallery {
-	margin: 0 auto;
+.item {
+	padding: 10px 0;
 }
 
-.entry {
-	width: 230px;
-	float: left;
-	margin: 10px 30px;
-	height: 198px;
-
-}
-
-.figure {
+.item img {
 	display: block;
-	width: 222px;
-	height: 180px;
-	margin: 0;
-	padding: 5px 5px;
-	text-align: left;
 	max-width: 50%;
-}
-
-.figure img {
-	width: 230px;
-	height: 150px;
 	border: 1px solid #000;
 }
-
-
 
 /**************** INFO / CONTACT PAGE ****************/
 
