--- a/Page for portfolio/css/style.css
+++ b/Page for portfolio/css/style.css
@@ -33,9 +33,9 @@ h3 {
 
 }
 
-#wrapper {
+.wrapper {
 	margin: 0 auto;
-	max-width: 75%;
+	max-width: 65%;
 	margin-bottom: 10px;
 	overflow: hidden;
 }
@@ -45,7 +45,7 @@ p {
 	color: #444444;
 }
 
-#content {
+.content {
 	padding: 10px;
 }
 
@@ -97,27 +97,42 @@ a {
 	text-decoration: none;
 }
 
-/* MAIN PAGE SLIDES */
+/* main page slides */
 
-#slides { 
-    margin: 40px 10%; 
-    position: relative; 
-    width: 100%;
-    height: 450px; 
-    padding: 10px; 
+.rslides {
+	position: relative;
+	list-style: none;
+	overflow: hidden;
+	width: 100%;
+	padding: 0;
+	margin: 0 25%;
 }
 
-#slides > div { 
-    position: absolute; 
-    top: 10px; 
-    left: 10px; 
-    right: 10px; 
-    bottom: 10px; 
+.rslides li {
+	-webkit-backface-visibility: hidden;
+	position: absolute;
+	display: none;
+	width: 100%;
+	left: 0;
+	top: 0;
 }
 
-#slides > div > img {
-	max-width: 70%;
+.rslides li:first-child {
+	position: relative;
+	display: block;
+	float: left;
 }
+
+.rslides img {
+	display: block;
+	height: auto;
+	float: left;
+	width: 50%;
+	border: 1px solid #000;
+	border-radius: 1%;
+}
+
+
 
 
 /**************** GALLERY ****************/
@@ -130,6 +145,7 @@ a {
 	display: block;
 	max-width: 50%;
 	border: 1px solid #000;
+	border-radius: 1%;
 }
 
 /**************** INFO / CONTACT PAGE ****************/
