--- a/Elya Portfolio v2/css/style.css
+++ b/Elya Portfolio v2/css/style.css
@@ -1,2 +1,56 @@
-/* CONTACT */
+/* ----------------- MAIN ----------------- */
 
+body {
+	background: url('../img/bg-roses.jpg');
+}
+
+#container {
+	max-width: 850px;
+	margin: 0 auto;
+	border: 2px solid #000;
+}
+
+/* ----------------- NAVIGATION ----------------- */
+
+.navigation {
+	background: #ccc;
+	padding: 20px;
+	text-align: center;
+}
+
+ul li {
+	display: inline;
+	margin: 10px; 
+}
+
+a {
+	text-decoration: none;
+}
+
+/* ----------------- ABOUT ----------------- */
+
+#about {
+	background: url('../img/bg-about.jpg');
+	padding: 10px;
+}
+
+.profile, .info, .socialStuff {
+	margin: 10px;
+}
+
+.socialStuff img {
+	width: 50px;
+	height: 50px;
+}
+
+/* ----------------- WORKS ----------------- */
+
+/* ----------------- CONTACT ----------------- */
+
+/* ----------------- FOOTER ----------------- */
+#footer {
+	text-align: center;
+	background: #ccc;
+	bottom: 0;
+	padding: 50px;
+}
